--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-    "name": "jsdom-fragments",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "format": "prettier --write ./**/*.{ts,tsx}"
-    },
-    "keywords": [],
-    "author": "dima117a@gmail.com",
-    "license": "MIT",
-    "description": "",
-    "devDependencies": {
-        "prettier": "3.6.2",
-        "tslib": "^2.8.1",
-        "typescript": "^5.9.2"
-    },
-    "dependencies": {
-        "@testing-library/dom": "^10.4.1",
-        "@testing-library/user-event": "^14.6.1",
-        "jsdom": "^26.1.0"
-    }
+  "name": "jsdom-fragments",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ./**/*.ts",
+    "build": "tsc --build tsconfig.json",
+    "prepare": "npm run clean;npm run build",
+    "clean": "rm -f ./src/*.{d.ts,js} ./index.{d.ts,js}",
+    "version-beta": "npm version prerelease --preid beta",
+    "publish-beta": "npm publish --tag beta"
+  },
+  "keywords": [],
+  "author": "dima117a@gmail.com",
+  "license": "MIT",
+  "description": "",
+  "devDependencies": {
+    "prettier": "3.6.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/user-event": "^14.6.1",
+    "jsdom": "^26.1.0"
+  }
 }
