--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepare": "npm run clean;npm run build",
     "clean": "rm -f ./src/*.{d.ts,js} ./index.{d.ts,js}",
     "version-beta": "npm version prerelease --preid beta",
-    "publish-beta": "npm publish --tag beta"
+    "publish-beta": "npm publish --tag beta",
+    "docs": "typedoc --plugin typedoc-plugin-markdown --out ./docs"
   },
   "keywords": [],
   "author": "dima117a@gmail.com",
@@ -18,6 +19,8 @@
   "devDependencies": {
     "prettier": "3.6.2",
     "tslib": "^2.8.1",
+    "typedoc": "^0.28.10",
+    "typedoc-plugin-markdown": "^4.8.1",
     "typescript": "^5.9.2"
   },
   "dependencies": {
