--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "jsdom-fragments",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write ./**/*.ts",
-    "build": "tsc --build tsconfig.json",
-    "prepare": "npm run clean;npm run build",
-    "clean": "rm -f ./src/*.{d.ts,js} ./index.{d.ts,js}",
-    "version-beta": "npm version prerelease --preid beta",
-    "publish-beta": "npm publish --tag beta",
-    "docs": "typedoc --plugin typedoc-plugin-markdown --out ./docs"
-  },
-  "keywords": [],
-  "author": "dima117a@gmail.com",
-  "license": "MIT",
-  "description": "",
-  "devDependencies": {
-    "prettier": "3.6.2",
-    "tslib": "^2.8.1",
-    "typedoc": "^0.28.10",
-    "typedoc-plugin-markdown": "^4.8.1",
-    "typescript": "^5.9.2"
-  },
-  "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/user-event": "^14.6.1",
-    "jsdom": "^26.1.0"
-  }
+    "name": "jsdom-fragments",
+    "version": "1.0.0",
+    "main": "dist/index.js",
+    "scripts": {
+        "test": "jest --passWithNoTests",
+        "format": "prettier --write ./**/*.ts",
+        "build": "tsc --build tsconfig.json",
+        "prepare": "npm run clean;npm run build",
+        "clean": "tsc --build --clean",
+        "version-beta": "npm version prerelease --preid beta",
+        "publish-beta": "npm publish --tag beta",
+        "docs": "typedoc --cleanOutputDir --includeHierarchySummary"
+    },
+    "author": "dima117a@gmail.com",
+    "license": "MIT",
+    "devDependencies": {
+        "jest": "^30.0.5",
+        "jest-environment-jsdom": "^30.0.5",
+        "prettier": "3.6.2",
+        "ts-jest": "^29.4.1",
+        "ts-node": "^10.9.2",
+        "tslib": "^2.8.1",
+        "typedoc": "^0.28.10",
+        "typedoc-plugin-markdown": "^4.8.1",
+        "typescript": "^5.9.2"
+    },
+    "dependencies": {
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/user-event": "^14.6.1",
+        "jsdom": "^26.1.0"
+    }
 }
