--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
-    "include": ["**/*.ts", "**/*.tsx"],
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
     "exclude": ["node_modules"],
     "compilerOptions": {
         "target": "es2017",
         "module": "commonjs",
-        "outDir": ".",
-        "rootDir": ".",
+        "outDir": "./dist",
+        "rootDir": "./src",
         "declaration": true,
         "importHelpers": true,
         "esModuleInterop": true,
