--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
         "typedoc-plugin-markdown": "^4.8.1",
         "typescript": "^5.9.2"
     },
-    "dependencies": {
-        "@testing-library/dom": "^10.4.1",
-        "@testing-library/user-event": "^14.6.1",
-        "jsdom": "^26.1.0"
+    "peerDependencies": {
+        "@testing-library/dom": ">=10.4.1",
+        "@testing-library/user-event": ">=14.6.1",
+        "jsdom": ">=26.1.0"
     }
 }
