feat: vite build

--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
         "url": "https://github.com/dima117/jsdom-fragments"
     },
     "license": "MIT",
-    "main": "dist/index.js",
+    "typings": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.js"
+        }
+    },
     "scripts": {
         "test": "jest",
         "format": "prettier --write ./**/*.ts",
-        "build": "tsc --build tsconfig.publish.json",
+        "build": "vite build",
         "prepare": "npm run clean;npm run build",
         "clean": "tsc --build --clean",
         "version-beta": "npm version prerelease --preid beta",
@@ -24,6 +30,7 @@
     "devDependencies": {
         "@spec-box/sync": "^1.2.0",
         "@types/jest": "^30.0.0",
+        "@types/node": "^24.10.1",
         "jest": "^30.0.5",
         "jest-environment-jsdom": "^30.0.5",
         "prettier": "3.6.2",
@@ -32,7 +39,9 @@
         "tslib": "^2.8.1",
         "typedoc": "^0.28.10",
         "typedoc-plugin-markdown": "^4.8.1",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.2",
+        "vite": "^7.2.6",
+        "vite-plugin-dts": "^4.5.4"
     },
     "peerDependencies": {
         "@testing-library/dom": ">=10.4.1",
